Fix align issue, Add Volunteering list

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -22,6 +22,7 @@ body {
 .card {
   background-color: $lighter-colour;
   margin: 10px;
+
   max-width: 30%;
   display: inline-flex;
   display: -webkit-box;
@@ -39,6 +40,10 @@ body {
 .cards-container {
   margin-top: 2%;
   margin-bottom: 5%;
+  margin-left: auto;
+  margin-right: auto;
+  width:100%;
+
 }
 
 .card-link {
